Chat and nav spacing fixes, SASS partial renaming

--- a/server/scss/_chat.scss
+++ b/server/scss/_chat.scss
@@ -175,7 +175,7 @@
   }
 
   @include tablet {
-    padding: 10px 5px 0 15px;
+    padding: 10px 5px 10px 15px;
 
     img {
       max-height: 50px;
@@ -184,7 +184,7 @@
   }
 
   @include small-desktop {
-    padding: 10px 15px 0 15px;
+    padding: 15px 15px 0 15px;
     article {
       width: 65%;
     }
@@ -207,7 +207,7 @@
   }
 
   @include tablet {
-    padding: 10px 15px 0 5px;
+    padding: 10px 15px 10px 5px;
 
     img {
       max-height: 50px;
@@ -245,6 +245,7 @@
 .sidebar-tab {
   color: $dark3;
   height: $nav-height;
+  line-height: 2.25em;
 
   .close-sidebar-btn {
     @include ver-hor-center;
